@@ -5,7 +5,7 @@
   <groupId>eu.lod2</groupId>
   <artifactId>lod2demo</artifactId>
   <packaging>war</packaging>
-  <version>1.1.34</version>
+  <version>1.2.00</version>
   <name>LOD2 demonstrator</name>
 
   <properties>
