@@ -10,3 +10,5 @@ lod2demo.war /usr/share/lod2demo
 test.sql /var/lib/lod2demo
 create_user.sql /var/lib/lod2demo
 remove_user.sql /var/lib/lod2demo
+configuration/configuration.nt etc/lod2demo
+configuration/configuration.rdf etc/lod2demo
