@@ -16,6 +16,11 @@ set -e
 
 case "$1" in
     install|upgrade)
+
+	ISQLIDOBC=`which isql-iodbc`
+	if [ -z "$ISQLIDOBC" ] ; then
+		echo "The LOD2 version of Virtuoso is not installed. One need to have isql-iodbc installed and in /etc/virtuoso-opensource-6.1/bd.ini present"
+	fi
     ;;
 
     abort-upgrade)
