@@ -1,0 +1,70 @@
+<IfModule mod_proxy.c>
+
+# If you want to use apache2 as a forward proxy, uncomment the
+# 'ProxyRequests On' line and the <Proxy *> block below.
+# WARNING: Be careful to restrict access inside the <Proxy *> block.
+# Open proxy servers are dangerous both to your network and to the
+# Internet at large.
+#
+# If you only want to use apache2 as a reverse proxy/gateway in
+# front of some web application server, you DON'T need
+# 'ProxyRequests On'.
+
+#ProxyRequests On
+#<Proxy *>
+#        AddDefaultCharset off
+#        Order deny,allow
+#        Deny from all
+#        #Allow from .example.com
+#</Proxy>
+
+# LOD2 
+# These are proxy settings for the lod2 demo webapplication
+# The original configuration file is backed up in /etc/apache2/mods-enabled/proxy.conf.bak
+# If there are any rules in that file your sysadmin has to merge them.
+
+<Proxy *>
+ Order deny,allow
+ Allow from all
+</Proxy>
+
+SSLProxyEngine On
+ProxyRequests  Off
+ProxyPreserveHost On
+
+ProxyPass /lod2demo http://localhost:8080/lod2demo
+ProxyPassReverse /lod2demo http://localhost:8080/lod2demo
+ProxyPass /conductor http://localhost:8890/conductor
+ProxyPassReverse /conductor http://localhost:8890/conductor
+ProxyPass /d2r-cordis http://localhost:2020
+ProxyPassReverse /d2r-cordis http://localhost:2020
+ProxyPass /d2r-cordis/snorql http://localhost:2020/snorql
+ProxyPassReverse /d2r-cordis/snorql http://localhost:2020/snorql
+ProxyPass /snorql http://localhost:2020/snorql
+ProxyPass /d2r-cordis/all http://localhost:2020/all
+ProxyPassReverse /d2r-cordis/all http://localhost:2020/all
+ProxyPass /directory http://localhost:2020/directort
+
+ProxyPass /silk http://localhost:8080/silk
+ProxyPassReverse /silk http://localhost:8080/silk
+ProxyPass /ore http://localhost:8080/ore
+ProxyPassReverse /ore http://localhost:8080/ore
+ProxyPass /sigmaee http://localhost:8080/sigmaee
+ProxyPassReverse /sigmaee http://localhost:8080/sigmaee
+ProxyPass /virtuoso/sparql http://localhost:8890/sparql
+ProxyPassReverse /virtuoso/sparql http://localhost:8890/sparql
+ProxyPass /virtuoso/isparql http://localhost:8890/isparql
+ProxyPassReverse /virtuoso/isparql http://localhost:8890/isparql
+ProxyPass /isparql http://localhost:8890/isparql
+ProxyPassReverse /isparql http://localhost:8890/isparql
+
+ProxyPass /lodgrefine/ http://localhost:3333/
+ProxyPassReverse /lodgrefine/ http://localhost:3333/
+
+
+# Enable/disable the handling of HTTP/1.1 "Via:" headers.
+# ("Full" adds the server version; "Block" removes all outgoing Via: headers)
+# Set to one of: Off | On | Full | Block
+#ProxyVia Off
+
+</IfModule>
